--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <title>Landing Zone</title>
-        <script src="math.js" type="text/javascript"></script>
-        <script src="main.js"></script>
+        <script src="./js/math.js" type="text/javascript"></script>
+        <script src="./js/main.js"></script>
         <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgk0typ3U7Xpwn0PaDlTZs_WKLp1taIWQ&callback=initMap"> </script>
-        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="stylesheet" type="text/css" href="./css/style.css" />
     </head>
     <body>
         <div id="title">
