--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
         <script src="./js/main.js"></script>
         <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgk0typ3U7Xpwn0PaDlTZs_WKLp1taIWQ&callback=initMap"> </script>
         <link rel="stylesheet" type="text/css" href="./css/style.css" />
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-SNFRWFSYPN"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+                gtag('js', new Date());
+                gtag('config', 'G-SNFRWFSYPN');
+        </script>
     </head>
     <body>
         <div id="title">
